Fixed Notes overflow

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
   background-color: #faeed7;
   border-radius: 12px;
   border: 1px solid rgb(211, 180, 180);
+  overflow-wrap: break-word;
 }
 
 #impNotesbtn {
@@ -35,11 +36,10 @@
 
 .impbtn {
   margin-top: 10px;
-  background-color: #cf3535 !important;
 }
 
 .imp {
-  background-color: #8bea97;
+  background-color: #b2fbbb;
 }
 
 #resetbtn {
